--- a/index.html
+++ b/index.html
@@ -49,6 +49,13 @@
       <div class="blog-item">
         <table>
           <thead>
+            <tr>
+              <th>Packages</th>
+              <th>Description</th>
+              <th>Updated at</th>
+            </tr>
+          </thead>
+          <tbody>
   
 <tr>
   <td><link><a href="https://nimble.directory/pkg/base45" target="_blank">base45</a></link></td>
@@ -999,6 +1006,7 @@
       </table>
 
       <article>
+        This website was last updated on 2022-06-18 <br />
         Nim packages data set available <a href="https://nimble.directory/" target="_blank">here</a>.
       </article>
   </main>
