--- a/public/index.html
+++ b/public/index.html
@@ -1007,7 +1007,7 @@
 
       <article>
         This website was last updated on 2022-06-18 <br />
-        Nim packages dataset available <a href="https://nimble.directory/" target="_blank">here</a>.
+        Nim packages dataset available <a href="https://nimble.directory/packages.xml" target="_blank">here</a>.
       </article>
   </main>
   <footer>
