--- a/public/index.html
+++ b/public/index.html
@@ -1006,7 +1006,7 @@
       </table>
 
       <article>
-        This website was last updated on 2022-06-18 <br />
+        This website update: Sun, 19 June 2022, 07:44 PM <br />
         Nim packages dataset available <a href="https://nimble.directory/packages.xml" target="_blank">here</a>.
       </article>
   </main>
